--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
 	"name": "homebridge-ambient-realtime",
 	"displayName": "Ambient",
-	"version": "0.1.5",
+	"version": "0.1.6",
+	"type": "module",
 	"description": "Ambient Realtime platform plugin for [Homebridge](https://github.com/nfarina/homebridge).",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"dependencies": {
 		"socket.io-client": "^4.8.0"
 	},
 	"engines": {
 		"homebridge": "^1.8.0 || ^2.0.0-beta.0",
 		"node": "^18.20.0 || ^20.17.0 || ^22.9.0"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/valiquette/homebridge-ambient-realtime"
 	},
 	"keywords": [
 		"homebridge-plugin",
@@ -27,11 +21,28 @@
 		"co2",
 		"leak"
 	],
-	"type":"commonjs",
 	"author": "John Valiquette",
-	"license": "MIT",
+	"license": "Apache-2.0",
+	"homepage": "https://github.com/valiquette/homebridge-Ambient-realtime#readme",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/valiquette/homebridge-Ambient-realtime.git"
+	},
 	"bugs": {
 		"url": "https://github.com/valiquette/homebridge-ambient-realtime/issues"
 	},
-	"homepage": "https://github.com/valiquette/homebridge-Ambient-realtime#readme"
+	"scripts": {
+		"build": "rimraf ./dist && tsc",
+		"prepublishOnly": "npm run lint && npm run build",
+		"watch": "npm run build && npm link && nodemon"
+	},
+	"devDependencies": {
+		"@types/node": "^22.7.4",
+		"@types/ws": "^8.5.12",
+		"homebridge": "^2.0.0-beta.0",
+		"nodemon": "^3.1.7",
+		"rimraf": "^6.0.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.2"
+	}
 }
