--- a/package.json
+++ b/package.json
@@ -33,16 +33,20 @@
 	},
 	"scripts": {
 		"build": "rimraf ./dist && tsc",
+		"lint": "eslint . --max-warnings=0",
 		"prepublishOnly": "npm run lint && npm run build",
 		"watch": "npm run build && npm link && nodemon"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.9.0",
+		"@types/eslint__js": "^8.42.3",
 		"@types/node": "^22.7.4",
 		"@types/ws": "^8.5.12",
 		"homebridge": "^2.0.0-beta.0",
 		"nodemon": "^3.1.7",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.0.1"
 	}
 }
