--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"homepage": "https://github.com/valiquette/homebridge-Ambient-realtime#readme",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/valiquette/homebridge-Ambient-realtime.git"
+		"url": "git+https://github.com/valiquette/homebridge-Ambient-realtime.git"
 	},
 	"bugs": {
 		"url": "https://github.com/valiquette/homebridge-ambient-realtime/issues"
