--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"socket.io-client": "^4.8.0"
 	},
 	"engines": {
-		"homebridge": "^1.8.0 || ^2.0.0-beta.0",
-		"node": "^18.20.0 || ^20.17.0 || ^22.9.0"
+		"homebridge": "^1.8.0 || ^1.9.0 || ^2.0.0-beta.0",
+		"node": "^18.20.0 || ^20.18.0 || ^22.14.0"
 	},
 	"keywords": [
 		"homebridge-plugin",
