--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
 		"watch": "npm run build && npm link && nodemon"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.9.0",
+		"@eslint/js": "^9.14.0",
 		"@types/eslint__js": "^8.42.3",
-		"@types/node": "^22.7.4",
-		"@types/ws": "^8.5.12",
+		"@types/node": "^22.8.6",
+		"eslint": "^9.20.1",
 		"homebridge": "^2.0.0-beta.0",
 		"nodemon": "^3.1.7",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.6.2",
-		"typescript-eslint": "^8.0.1"
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.24.1"
 	}
 }
